--- a/GestionClient/GestionClient.Model/GestionClient.Model.csproj
+++ b/GestionClient/GestionClient.Model/GestionClient.Model.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1A7F410-8376-4496-BFBF-6B5E33FEADC7}</ProjectGuid>
+    <ProjectGuid>{754017D9-D3F3-4F34-B273-B5852965C59D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GestionClient.Manager</RootNamespace>
-    <AssemblyName>GestionClient.Manager</AssemblyName>
+    <RootNamespace>GestionClient.Model</RootNamespace>
+    <AssemblyName>GestionClient.Model</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,19 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface\ICollaborateurManager.cs" />
-    <Compile Include="Interface\ICrudManager.cs" />
-    <Compile Include="Interface\ICabinetManager.cs" />
-    <Compile Include="Manager\CabinetManager.cs" />
-    <Compile Include="Manager\CollaborateurManager.cs" />
-    <Compile Include="Manager\CrudManager.cs" />
+    <Compile Include="Dto\Cabinet\CabinetAddDto.cs" />
+    <Compile Include="Dto\Cabinet\CabinetDto.cs" />
+    <Compile Include="Dto\Cabinet\CabinetSearchDto.cs" />
+    <Compile Include="Dto\Collaborateur\PraticienDto.cs" />
+    <Compile Include="Enum\RoleEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GestionClient.Data\GestionClient.Data.csproj">
-      <Project>{466a5879-6b7e-4293-bdb8-1e66d0bc30ee}</Project>
-      <Name>GestionClient.Data</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
