--- a/GestionClient/GestionClient.Service/GestionClient.Service.csproj
+++ b/GestionClient/GestionClient.Service/GestionClient.Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1A7F410-8376-4496-BFBF-6B5E33FEADC7}</ProjectGuid>
+    <ProjectGuid>{42A44E32-F567-474D-89A0-B120B5FE2E56}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GestionClient.Manager</RootNamespace>
-    <AssemblyName>GestionClient.Manager</AssemblyName>
+    <RootNamespace>GestionClient.Service</RootNamespace>
+    <AssemblyName>GestionClient.Service</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,21 +41,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface\ICollaborateurManager.cs" />
-    <Compile Include="Interface\ICrudManager.cs" />
-    <Compile Include="Interface\ICabinetManager.cs" />
-    <Compile Include="Manager\CabinetManager.cs" />
-    <Compile Include="Manager\CollaborateurManager.cs" />
-    <Compile Include="Manager\CrudManager.cs" />
+    <Compile Include="Interface\ICabinetService.cs" />
+    <Compile Include="Mapping\CabinetMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\CabinetService.cs" />
+    <Compile Include="Utils\PredicateBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GestionClient.Data\GestionClient.Data.csproj">
       <Project>{466a5879-6b7e-4293-bdb8-1e66d0bc30ee}</Project>
       <Name>GestionClient.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\GestionClient.Manager\GestionClient.Manager.csproj">
+      <Project>{f1a7f410-8376-4496-bfbf-6b5e33feadc7}</Project>
+      <Name>GestionClient.Manager</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GestionClient.Model\GestionClient.Model.csproj">
+      <Project>{754017d9-d3f3-4f34-b273-b5852965c59d}</Project>
+      <Name>GestionClient.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GestionClient.Tools\GestionClient.Tools.csproj">
+      <Project>{7f000bd7-1ab2-4266-84a6-9bcd82a3eecd}</Project>
+      <Name>GestionClient.Tools</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
