--- a/GestionClient/GestionClient.Tools/GestionClient.Tools.csproj
+++ b/GestionClient/GestionClient.Tools/GestionClient.Tools.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1A7F410-8376-4496-BFBF-6B5E33FEADC7}</ProjectGuid>
+    <ProjectGuid>{7F000BD7-1AB2-4266-84A6-9BCD82A3EECD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GestionClient.Manager</RootNamespace>
-    <AssemblyName>GestionClient.Manager</AssemblyName>
+    <RootNamespace>GestionClient.Tools</RootNamespace>
+    <AssemblyName>GestionClient.Tools</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,21 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface\ICollaborateurManager.cs" />
-    <Compile Include="Interface\ICrudManager.cs" />
-    <Compile Include="Interface\ICabinetManager.cs" />
-    <Compile Include="Manager\CabinetManager.cs" />
-    <Compile Include="Manager\CollaborateurManager.cs" />
-    <Compile Include="Manager\CrudManager.cs" />
+    <Compile Include="Extension\StringExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GestionClient.Data\GestionClient.Data.csproj">
-      <Project>{466a5879-6b7e-4293-bdb8-1e66d0bc30ee}</Project>
-      <Name>GestionClient.Data</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
