--- a/GestionClient/GestionClient/GestionClient.UI.csproj
+++ b/GestionClient/GestionClient/GestionClient.UI.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -85,14 +86,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\PageChangeEvent.cs" />
+    <Compile Include="ViewModel\DetailCabinetViewModel.cs" />
     <Compile Include="ViewModel\AddCabinetViewModel.cs" />
     <Compile Include="View\AddCabinet.xaml.cs">
       <DependentUpon>AddCabinet.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\DetailCabinet.xaml.cs">
+      <DependentUpon>DetailCabinet.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
     </Compile>
-    <Compile Include="RelayCommand.cs" />
+    <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="ViewModel\AcceuilViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\IBaseViewModel.cs" />
@@ -105,12 +111,16 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Bindings.cs" />
+    <Compile Include="Common\Bindings.cs" />
     <Compile Include="View\Acceuil.xaml.cs">
       <DependentUpon>Acceuil.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\AddCabinet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\DetailCabinet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
