--- a/GestionClient/GestionClient/App.config
+++ b/GestionClient/GestionClient/App.config
@@ -8,7 +8,7 @@
   </startup>
   <connectionStrings>
     <add name="GestionClientEntities" 
-         connectionString="metadata=res://*/GestionClient.csdl|res://*/GestionClient.ssdl|res://*/GestionClient.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BEN\SQLEXPRESS;initial catalog=GestionClientDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+         connectionString="metadata=res://*/GestionClient.csdl|res://*/GestionClient.ssdl|res://*/GestionClient.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARIE-L\SQLEXPRESS;initial catalog=GestionClientDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     
     
   </connectionStrings>
