--- a/GestionClient/GestionClient/GestionClient.UI.csproj
+++ b/GestionClient/GestionClient/GestionClient.UI.csproj
@@ -102,17 +102,25 @@
     <Compile Include="ViewModel\Cabinet\DetailCabinetViewModel.cs" />
     <Compile Include="ViewModel\Cabinet\AddCabinetViewModel.cs" />
     <Compile Include="ViewModel\Collaborateur\CollaborateurViewModel.cs" />
+    <Compile Include="ViewModel\Collaborateur\EditPraticienViewModel.cs" />
+    <Compile Include="ViewModel\Collaborateur\EditAssistantViewModel.cs" />
     <Compile Include="View\Cabinet\AddCabinet.xaml.cs">
       <DependentUpon>AddCabinet.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Cabinet\DetailCabinet.xaml.cs">
       <DependentUpon>DetailCabinet.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Collaborateur\DetailPraticien.xaml.cs">
-      <DependentUpon>DetailPraticien.xaml</DependentUpon>
+    <Compile Include="View\Collaborateur\AddPraticien.xaml.cs">
+      <DependentUpon>AddPraticien.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Collaborateur\DetailAssistant.xaml.cs">
-      <DependentUpon>DetailAssistant.xaml</DependentUpon>
+    <Compile Include="View\Collaborateur\AddAssistant.xaml.cs">
+      <DependentUpon>AddAssistant.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Collaborateur\EditAssistant.xaml.cs">
+      <DependentUpon>EditAssistant.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Collaborateur\EditPraticien.xaml.cs">
+      <DependentUpon>EditPraticien.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
@@ -143,11 +151,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Collaborateur\DetailPraticien.xaml">
+    <Page Include="View\Collaborateur\AddPraticien.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\Collaborateur\DetailAssistant.xaml">
+    <Page Include="View\Collaborateur\AddAssistant.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Collaborateur\EditAssistant.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Collaborateur\EditPraticien.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
