--- a/GestionClient/GestionClient/App.config
+++ b/GestionClient/GestionClient/App.config
@@ -8,9 +8,12 @@
   </startup>
   <connectionStrings>
     <add name="GestionClientEntities" 
-         connectionString="metadata=res://*/GestionClient.csdl|res://*/GestionClient.ssdl|res://*/GestionClient.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ben\SQLEXPRESS;initial catalog=GestionClientDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
-    
+         connectionString="metadata=res://*/GestionClient.csdl|res://*/GestionClient.ssdl|res://*/GestionClient.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=GestionClient;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+    <!--<add name="GestionClientEntities"
+         connectionString="metadata=res://*/GestionClient.csdl|res://*/GestionClient.ssdl|res://*/GestionClient.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ben\SQLEXPRESS;initial catalog=GestionClientDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
+
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
