--- a/GestionClient/GestionClient/GestionClient.UI.csproj
+++ b/GestionClient/GestionClient/GestionClient.UI.csproj
@@ -96,7 +96,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\MessageDisplayEvent.cs" />
     <Compile Include="Common\PageChangeEvent.cs" />
+    <Compile Include="ViewModel\Cabinet\EditCabinetViewModel.cs" />
     <Compile Include="ViewModel\Collaborateur\AddAssistantViewModel.cs" />
     <Compile Include="ViewModel\Collaborateur\AddPraticienViewModel.cs" />
     <Compile Include="ViewModel\Cabinet\DetailCabinetViewModel.cs" />
@@ -109,6 +111,9 @@
     </Compile>
     <Compile Include="View\Cabinet\DetailCabinet.xaml.cs">
       <DependentUpon>DetailCabinet.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Cabinet\EditCabinet.xaml.cs">
+      <DependentUpon>EditCabinet.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Collaborateur\AddPraticien.xaml.cs">
       <DependentUpon>AddPraticien.xaml</DependentUpon>
@@ -148,6 +153,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Cabinet\DetailCabinet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Cabinet\EditCabinet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
